--- a/pages HTML/Accueil.html
+++ b/pages HTML/Accueil.html
@@ -4,13 +4,100 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="./css/style.css" />
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&family=Shrikhand&display=swap" rel="stylesheet" />
+        <link rel="stylesheet" href="../css/style.css" />
+        <script src="https://kit.fontawesome.com/59d113e09e.js" crossorigin="anonymous"></script>
         <title>ohmyfood</title>
     </head>
 
-    <header></header>
+    <header class="header--accueil">
+        <img src="../images/logo/ohmyfood.png" alt="logo du site" />
+    </header>
 
-    <body></body>
+    <body>
+        <div class="localisation">
+            <p class="localisation__ville"><i class="fa-solid fa-location-dot"></i>Paris, Belleville</p>
+            <div class="localisation__find-restaurant">
+                <h2>Réserver le menu qui vous convient</h2>
+                <p>Découvrez des restaurants d'expection, selectionnés par nos soins.</p>
+                <a href="#"><button class="localisation__button">Explorer nos restaurants</button></a>
+            </div>
+        </div>
+        <div class="fonctionnement">
+            <h2>Fonctionnement</h2>
+            <a href="#">
+                <div class="fonctionnement__etapes">
+                    <span>1</span>
+                    <p><i class="fa-solid fa-mobile-screen-button"></i>Choisissez un restaurant</p>
+                </div>
+            </a>
+            <a href="#">
+                <div class="fonctionnement__etapes">
+                    <span>2</span>
+                    <p><i class="fa-solid fa-list-ul"></i>Composez votre menu</p>
+                </div>
+            </a>
+            <a href="#">
+                <div class="fonctionnement__etapes">
+                    <span>3</span>
+                    <p><i class="fa-solid fa-store"></i>Degustez au restaurant</p>
+                </div>
+            </a>
+        </div>
+        <div class="restaurant">
+            <h2>Restaurants</h2>
+            <a href="#">
+                <div class="restaurant__vignette">
+                    <img src="../images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="photo du restaurantla palette du goût" />
+                    <h3>La palette du goût</h3>
+                    <p>Ménilmontant</p>
+                    <span>Nouveau</span>
+                    <i class="fa-regular fa-heart"></i>
+                </div>
+            </a>
+            <a href="#">
+                <div class="restaurant__vignette">
+                    <img src="../images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="photo du restaurant la note enchantée " />
+                    <h3>La note enchantée</h3>
+                    <p>Charonne</p>
+                    <span>Nouveau</span>
+                    <i class="fa-regular fa-heart"></i>
+                </div>
+            </a>
+            <a href="#">
+                <div class="restaurant__vignette">
+                    <img src="../images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="photo du restaurant à la française" />
+                    <h3>À la française</h3>
+                    <p>Cité Rouge</p>
+                    <i class="fa-regular fa-heart"></i>
+                </div>
+            </a>
+            <a href="#">
+                <div class="restaurant__vignette">
+                    <img src="../images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="photo du restaurant le délice des sens" />
+                    <h3>Le délice des sens</h3>
+                    <p>Folie-Méricourt</p>
+                    <i class="fa-regular fa-heart"></i>
+                </div>
+            </a>
+        </div>
+    </body>
 
-    <footer></footer>
+    <footer>
+        <h1>ohmyfood</h1>
+        <a href="#">
+            <p><i class="fa-solid fa-utensils"></i>Proposer un restaurant</p>
+        </a>
+        <a href="#">
+            <p><i class="fa-solid fa-handshake-angle"></i>Devenir partenaire</p>
+        </a>
+        <a href="#">
+            <p>Mentions légales</p>
+        </a>
+        <a href="#">
+            <p>Contact</p>
+        </a>
+    </footer>
 </html>
