--- a/pages HTML/Accueil.html
+++ b/pages HTML/Accueil.html
@@ -55,6 +55,7 @@
                     <p>Ménilmontant</p>
                     <span>Nouveau</span>
                     <i class="fa-regular fa-heart"></i>
+                    <i class="fa-solid fa-heart"></i>
                 </div>
             </a>
             <a href="#">
@@ -64,6 +65,7 @@
                     <p>Charonne</p>
                     <span>Nouveau</span>
                     <i class="fa-regular fa-heart"></i>
+                    <i class="fa-solid fa-heart"></i>
                 </div>
             </a>
             <a href="#">
@@ -72,6 +74,7 @@
                     <h3>À la française</h3>
                     <p>Cité Rouge</p>
                     <i class="fa-regular fa-heart"></i>
+                    <i class="fa-solid fa-heart"></i>
                 </div>
             </a>
             <a href="#">
@@ -80,6 +83,7 @@
                     <h3>Le délice des sens</h3>
                     <p>Folie-Méricourt</p>
                     <i class="fa-regular fa-heart"></i>
+                    <i class="fa-solid fa-heart"></i>
                 </div>
             </a>
         </div>
