--- a/pages HTML/Accueil.html
+++ b/pages HTML/Accueil.html
@@ -79,7 +79,9 @@
             </a>
             <a href="#">
                 <div class="restaurant__vignette">
-                    <img src="../images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="photo du restaurant le délice des sens" />
+                    <img
+                        src="../images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
+                        alt="photo du restaurant le délice des sens" />
                     <h3>Le délice des sens</h3>
                     <p>Folie-Méricourt</p>
                     <i class="fa-regular fa-heart"></i>
