--- a/pages HTML/laNoteEnchantee.html
+++ b/pages HTML/laNoteEnchantee.html
@@ -9,7 +9,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&family=Shrikhand&display=swap" rel="stylesheet" />
         <link rel="stylesheet" href="../css/style.css" />
         <script src="https://kit.fontawesome.com/59d113e09e.js" crossorigin="anonymous"></script>
-        <title>ohmyfood</title>
+        <title>La note enchantée</title>
     </head>
 
     <header class="header--menu">
@@ -17,7 +17,130 @@
         <img src="../images/logo/ohmyfood.png" alt="logo du site" />
     </header>
 
-    <body></body>
+    <body>
+        <img class="photo-restaurant" src="../images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="photo du restaurant la note enchantée " />
+        <div class="menu">
+            <h1 class="menu__title">La note enchantée</h1>
+            <i class="fa-regular fa-heart"></i>
+            <i class="fa-solid fa-heart"></i>
+            <div class="menu__part">
+                <h2>ENTRÉES</h2>
+                <a href="#">
+                    <div class="menu__vignette">
+                        <h3>Ravioles de foie gras</h3>
+                        <div class="menu__vignette__details">
+                            <p>Accompagnées de leur crème à la truffe</p>
+                            <p><strong>25€</strong></p>
+                        </div>
+                    </div>
+                </a>
+                <a href="#">
+                    <div class="menu__vignette">
+                        <h3>Caviar osciètre</h3>
+                        <div class="menu__vignette__details">
+                            <p>Sur blini à la farine de blé noir</p>
+                            <p><strong>35€</strong></p>
+                        </div>
+                    </div>
+                </a>
+                <a href="#">
+                    <div class="menu__vignette">
+                        <h3>Homard et espuma de potiron</h3>
+                        <div class="menu__vignette__details">
+                            <p>Marinés aux zestes d'orange</p>
+                            <p><strong>20€</strong></p>
+                        </div>
+                    </div>
+                </a>
+                <a href="#">
+                    <div class="menu__vignette">
+                        <h3>Foie gras de canard cuit entier</h3>
+                        <div class="menu__vignette__details">
+                            <p>Confiture de figue et pain toasté</p>
+                            <p><strong>35€</strong></p>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="menu__part">
+                <h2>PLATS</h2>
+                <a href="#">
+                    <div class="menu__vignette">
+                        <h3>Noix de coquilles Saint-Jacques</h3>
+                        <div class="menu__vignette__details">
+                            <p>Sur lit de purée de céleri-rave</p>
+                            <p><strong>40€</strong></p>
+                        </div>
+                    </div>
+                </a>
+                <a href="#">
+                    <div class="menu__vignette">
+                        <h3>Langoustine poêlée</h3>
+                        <div class="menu__vignette__details">
+                            <p>Et purée de patate douce</p>
+                            <p><strong>35€</strong></p>
+                        </div>
+                    </div>
+                </a>
+                <a href="#">
+                    <div class="menu__vignette">
+                        <h3>Mijoté de queue de bœuf</h3>
+                        <div class="menu__vignette__details">
+                            <p>Et riz sauvage aux zestes de citron</p>
+                            <p><strong>44€</strong></p>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="menu__part">
+                <h2>DESSERTS</h2>
+                <a href="#">
+                    <div class="menu__vignette">
+                        <h3>Macaron noisette et chocolat</h3>
+                        <div class="menu__vignette__details">
+                            <p>Glace au caramel brun et sel de guérande</p>
+                            <p><strong>18€</strong></p>
+                        </div>
+                    </div>
+                </a>
+                <a href="#">
+                    <div class="menu__vignette">
+                        <h3>Baba au rhum revisité</h3>
+                        <div class="menu__vignette__details">
+                            <p>Avec son coulis de citron</p>
+                            <p><strong>22€</strong></p>
+                        </div>
+                    </div>
+                </a>
+                <a href="#">
+                    <div class="menu__vignette">
+                        <h3>Tarte au citron meringuée</h3>
+                        <div class="menu__vignette__details">
+                            <p>Déstrcuturée</p>
+                            <p><strong>23€</strong></p>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <a href="#">
+                <div class="menu__button"><button>Commander</button></div>
+            </a>
+        </div>
+    </body>
 
-    <footer></footer>
+    <footer>
+        <h1>ohmyfood</h1>
+        <a href="#">
+            <p><i class="fa-solid fa-utensils"></i>Proposer un restaurant</p>
+        </a>
+        <a href="#">
+            <p><i class="fa-solid fa-handshake-angle"></i>Devenir partenaire</p>
+        </a>
+        <a href="#">
+            <p>Mentions légales</p>
+        </a>
+        <a href="#">
+            <p>Contact</p>
+        </a>
+    </footer>
 </html>
