--- a/pages HTML/laPaletteDuGout.html
+++ b/pages HTML/laPaletteDuGout.html
@@ -9,14 +9,132 @@
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&family=Shrikhand&display=swap" rel="stylesheet" />
         <link rel="stylesheet" href="../css/style.css" />
         <script src="https://kit.fontawesome.com/59d113e09e.js" crossorigin="anonymous"></script>
-        <title>ohmyfood</title>
+        <title>La palette du goût</title>
     </head>
 
     <header class="header--menu">
+        <a href="./Accueil.html"><i class="fa-sharp fa-solid fa-arrow-left"></i></a>
         <img src="../images/logo/ohmyfood.png" alt="logo du site" />
     </header>
 
-    <body></body>
+    <body>
+        <img
+            class="photo-restaurant"
+            src="../images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+            alt="photo du restaurantla palette du goût" />
+        <div class="menu">
+            <h1 class="menu__title">La palette du gout</h1>
+            <i class="fa-regular fa-heart"></i>
+            <i class="fa-solid fa-heart"></i>
+            <div class="menu__part">
+                <h2>ENTRÉES</h2>
+                <a href="#">
+                    <div class="menu__vignette">
+                        <h3>Fricassée d'escargots</h3>
+                        <div class="menu__vignette__details">
+                            <p>Au piment d'Espelette</p>
+                            <p><strong>25€</strong></p>
+                        </div>
+                    </div>
+                </a>
+                <a href="#">
+                    <div class="menu__vignette">
+                        <h3>Foie gras de canard mi-cuit</h3>
+                        <div class="menu__vignette__details">
+                            <p>Et ses copeaux de truffe noire</p>
+                            <p><strong>35€</strong></p>
+                        </div>
+                    </div>
+                </a>
+                <a href="#">
+                    <div class="menu__vignette">
+                        <h3>Œeuf au plat</h3>
+                        <div class="menu__vignette__details">
+                            <p>Assaisonné à la truffe sur lit de caviar</p>
+                            <p><strong>20€</strong></p>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="menu__part">
+                <h2>PLATS</h2>
+                <a href="#">
+                    <div class="menu__vignette">
+                        <h3>Filet de bœuf aux herbes</h3>
+                        <div class="menu__vignette__details">
+                            <p>Accompagné de sa ribambelle de légume</p>
+                            <p><strong>40€</strong></p>
+                        </div>
+                    </div>
+                </a>
+                <a href="#">
+                    <div class="menu__vignette">
+                        <h3>Parmantier de queue de bœuf</h3>
+                        <div class="menu__vignette__details">
+                            <p>À la truffe noire sur sa purée de panais</p>
+                            <p><strong>35€</strong></p>
+                        </div>
+                    </div>
+                </a>
+                <a href="#">
+                    <div class="menu__vignette">
+                        <h3>Filet de turbot</h3>
+                        <div class="menu__vignette__details">
+                            <p>Aux agrumes</p>
+                            <p><strong>44€</strong></p>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="menu__part">
+                <h2>DESSERTS</h2>
+                <a href="#">
+                    <div class="menu__vignette">
+                        <h3>Paris-Brest</h3>
+                        <div class="menu__vignette__details">
+                            <p>Revisité</p>
+                            <p><strong>€</strong></p>
+                        </div>
+                    </div>
+                </a>
+                <a href="#">
+                    <div class="menu__vignette">
+                        <h3>Macaron au chocolat d'excpetion</h3>
+                        <div class="menu__vignette__details">
+                            <p>Et glace à la vanille de Madagascar</p>
+                            <p><strong>22€</strong></p>
+                        </div>
+                    </div>
+                </a>
+                <a href="#">
+                    <div class="menu__vignette">
+                        <h3>Mousse au chocolat</h3>
+                        <div class="menu__vignette__details">
+                            <p>Au piment d'Espelette et à la truffe noire</p>
+                            <p><strong>23€</strong></p>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <a href="#">
+                <div class="menu__button"><button>Commander</button></div>
+            </a>
+        </div>
+    </body>
 
-    <footer></footer>
+    <footer>
+        <h1>ohmyfood</h1>
+        <a href="#">
+            <p><i class="fa-solid fa-utensils"></i>Proposer un restaurant</p>
+        </a>
+        <a href="#">
+            <p><i class="fa-solid fa-handshake-angle"></i>Devenir partenaire</p>
+        </a>
+        <a href="#">
+            <p>Mentions légales</p>
+        </a>
+        <a href="#">
+            <p>Contact</p>
+        </a>
+    </footer>
 </html>
