--- a/pages HTML/leDeliceDesSens.html
+++ b/pages HTML/leDeliceDesSens.html
@@ -9,14 +9,132 @@
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&family=Shrikhand&display=swap" rel="stylesheet" />
         <link rel="stylesheet" href="../css/style.css" />
         <script src="https://kit.fontawesome.com/59d113e09e.js" crossorigin="anonymous"></script>
-        <title>ohmyfood</title>
+        <title>Le délice des sens</title>
     </head>
 
     <header class="header--menu">
+        <a href="./Accueil.html"><i class="fa-sharp fa-solid fa-arrow-left"></i></a>
         <img src="../images/logo/ohmyfood.png" alt="logo du site" />
     </header>
 
-    <body></body>
+    <body>
+        <img
+            class="photo-restaurant"
+            src="../images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
+            alt="photo du restaurant le délice des sens" />
+        <div class="menu">
+            <h1 class="menu__title">Le délice des sens</h1>
+            <i class="fa-regular fa-heart"></i>
+            <i class="fa-solid fa-heart"></i>
+            <div class="menu__part">
+                <h2>ENTRÉES</h2>
+                <a href="#">
+                    <div class="menu__vignette">
+                        <h3>Tartare de thon</h3>
+                        <div class="menu__vignette__details">
+                            <p>Assaisonné au yuzu</p>
+                            <p><strong>25€</strong></p>
+                        </div>
+                    </div>
+                </a>
+                <a href="#">
+                    <div class="menu__vignette">
+                        <h3>Bouchée de homard croustillant</h3>
+                        <div class="menu__vignette__details">
+                            <p>Et sa farandole de petits légumes</p>
+                            <p><strong>35€</strong></p>
+                        </div>
+                    </div>
+                </a>
+                <a href="#">
+                    <div class="menu__vignette">
+                        <h3>Velouté de cèpes</h3>
+                        <div class="menu__vignette__details">
+                            <p>aux truffes</p>
+                            <p><strong>20€</strong></p>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="menu__part">
+                <h2>PLATS</h2>
+                <a href="#">
+                    <div class="menu__vignette">
+                        <h3>Poulet rôti aux herbes de Provence</h3>
+                        <div class="menu__vignette__details">
+                            <p>Et sa crème de truffe</p>
+                            <p><strong>40€</strong></p>
+                        </div>
+                    </div>
+                </a>
+                <a href="#">
+                    <div class="menu__vignette">
+                        <h3>Langouste rôtie</h3>
+                        <div class="menu__vignette__details">
+                            <p>Et ses légumes de saison</p>
+                            <p><strong>35€</strong></p>
+                        </div>
+                    </div>
+                </a>
+                <a href="#">
+                    <div class="menu__vignette">
+                        <h3>Côte de bœuf Angus</h3>
+                        <div class="menu__vignette__details">
+                            <p>Et sa purée de panais</p>
+                            <p><strong>44€</strong></p>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="menu__part">
+                <h2>DESSERTS</h2>
+                <a href="#">
+                    <div class="menu__vignette">
+                        <h3>Farandole de desserts</h3>
+                        <div class="menu__vignette__details">
+                            <p>Du chef</p>
+                            <p><strong>18€</strong></p>
+                        </div>
+                    </div>
+                </a>
+                <a href="#">
+                    <div class="menu__vignette">
+                        <h3>Crème brûlée</h3>
+                        <div class="menu__vignette__details">
+                            <p>Revisitée</p>
+                            <p><strong>22€</strong></p>
+                        </div>
+                    </div>
+                </a>
+                <a href="#">
+                    <div class="menu__vignette">
+                        <h3>Tiramisu</h3>
+                        <div class="menu__vignette__details">
+                            <p>À la noisette</p>
+                            <p><strong>23€</strong></p>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <a href="#">
+                <div class="menu__button"><button>Commander</button></div>
+            </a>
+        </div>
+    </body>
 
-    <footer></footer>
+    <footer>
+        <h1>ohmyfood</h1>
+        <a href="#">
+            <p><i class="fa-solid fa-utensils"></i>Proposer un restaurant</p>
+        </a>
+        <a href="#">
+            <p><i class="fa-solid fa-handshake-angle"></i>Devenir partenaire</p>
+        </a>
+        <a href="#">
+            <p>Mentions légales</p>
+        </a>
+        <a href="#">
+            <p>Contact</p>
+        </a>
+    </footer>
 </html>
