ajout animation à entrainé modification sur le code html

--- a/pages HTML/laNoteEnchantee.html
+++ b/pages HTML/laNoteEnchantee.html
@@ -9,138 +9,143 @@
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&family=Shrikhand&display=swap" rel="stylesheet" />
         <link rel="stylesheet" href="../css/style.css" />
         <script src="https://kit.fontawesome.com/59d113e09e.js" crossorigin="anonymous"></script>
-        <title>La note enchantée</title>
+        <title>À la française</title>
     </head>
 
+    <!-- header -->
     <header class="header--menu">
-        <a href="./Accueil.html"><i class="fa-sharp fa-solid fa-arrow-left"></i></a>
+        <a href="../index.html"><i class="fa-sharp fa-solid fa-arrow-left"></i></a>
         <img src="../images/logo/ohmyfood.png" alt="logo du site" />
     </header>
 
+    <!-- body -->
     <body>
-        <img class="photo-restaurant" src="../images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="photo du restaurant la note enchantée " />
-        <div class="menu">
-            <h1 class="menu__title">La note enchantée</h1>
+        <img class="photo-restaurant" src="../images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Photo du restaurant à la française" />
+
+        <!-- global section gathering all details of menu -->
+        <section class="menu">
+            <h1 class="menu__title">À la française</h1>
             <i class="fa-regular fa-heart"></i>
             <i class="fa-solid fa-heart"></i>
-            <div class="menu__part">
+
+            <!-- first article gathering all item of menu's first part -->
+            <article class="menu__part">
                 <h2>ENTRÉES</h2>
                 <a href="#">
-                    <div class="menu__vignette">
-                        <h3>Ravioles de foie gras</h3>
-                        <div class="menu__vignette__details">
-                            <p>Accompagnées de leur crème à la truffe</p>
-                            <p><strong>25€</strong></p>
+                    <div class="menu__vignette delay-1">
+                        <div class="menu__vignette__description">
+                            <h3>Tartare de poulpe acidulé</h3>
+                            <p>Aux zestes d'orange</p>
                         </div>
+                        <div class="menu__vignette__prix"><strong>25€</strong></div>
+                        <div class="menu__vignette__check"><i class="fas fa-check"></i></div>
                     </div>
                 </a>
                 <a href="#">
-                    <div class="menu__vignette">
-                        <h3>Caviar osciètre</h3>
-                        <div class="menu__vignette__details">
-                            <p>Sur blini à la farine de blé noir</p>
-                            <p><strong>35€</strong></p>
+                    <div class="menu__vignette delay-2">
+                        <div class="menu__vignette__description">
+                            <h3></h3>
+                            <p></p>
                         </div>
+                        <div class="menu__vignette__prix"><strong>€</strong></div>
+                        <div class="menu__vignette__check"><i class="fas fa-check"></i></div>
                     </div>
                 </a>
                 <a href="#">
-                    <div class="menu__vignette">
-                        <h3>Homard et espuma de potiron</h3>
-                        <div class="menu__vignette__details">
-                            <p>Marinés aux zestes d'orange</p>
-                            <p><strong>20€</strong></p>
+                    <div class="menu__vignette delay-3">
+                        <div class="menu__vignette__description">
+                            <h3></h3>
+                            <p></p>
                         </div>
+                        <div class="menu__vignette__prix"><strong>€</strong></div>
+                        <div class="menu__vignette__check"><i class="fas fa-check"></i></div>
                     </div>
                 </a>
-                <a href="#">
-                    <div class="menu__vignette">
-                        <h3>Foie gras de canard cuit entier</h3>
-                        <div class="menu__vignette__details">
-                            <p>Confiture de figue et pain toasté</p>
-                            <p><strong>35€</strong></p>
-                        </div>
-                    </div>
-                </a>
-            </div>
-            <div class="menu__part">
+            </article>
+
+            <!-- second article gathering all item of menu's second part -->
+            <article class="menu__part">
                 <h2>PLATS</h2>
                 <a href="#">
-                    <div class="menu__vignette">
-                        <h3>Noix de coquilles Saint-Jacques</h3>
-                        <div class="menu__vignette__details">
-                            <p>Sur lit de purée de céleri-rave</p>
-                            <p><strong>40€</strong></p>
+                    <div class="menu__vignette delay-4">
+                        <div class="menu__vignette__description">
+                            <h3></h3>
+                            <p></p>
                         </div>
+                        <div class="menu__vignette__prix"><strong>€</strong></div>
+                        <div class="menu__vignette__check"><i class="fas fa-check"></i></div>
                     </div>
                 </a>
                 <a href="#">
-                    <div class="menu__vignette">
-                        <h3>Langoustine poêlée</h3>
-                        <div class="menu__vignette__details">
-                            <p>Et purée de patate douce</p>
-                            <p><strong>35€</strong></p>
+                    <div class="menu__vignette delay-5">
+                        <div class="menu__vignette__description">
+                            <h3></h3>
+                            <p></p>
                         </div>
+                        <div class="menu__vignette__prix"><strong>€</strong></div>
+                        <div class="menu__vignette__check"><i class="fas fa-check"></i></div>
                     </div>
                 </a>
                 <a href="#">
-                    <div class="menu__vignette">
-                        <h3>Mijoté de queue de bœuf</h3>
-                        <div class="menu__vignette__details">
-                            <p>Et riz sauvage aux zestes de citron</p>
-                            <p><strong>44€</strong></p>
+                    <div class="menu__vignette delay-6">
+                        <div class="menu__vignette__description">
+                            <h3></h3>
+                            <p></p>
                         </div>
+                        <div class="menu__vignette__prix"><strong>€</strong></div>
+                        <div class="menu__vignette__check"><i class="fas fa-check"></i></div>
                     </div>
                 </a>
-            </div>
-            <div class="menu__part">
+            </article>
+
+            <!-- third article gathering all item of menu's third part -->
+            <article class="menu__part">
                 <h2>DESSERTS</h2>
                 <a href="#">
-                    <div class="menu__vignette">
-                        <h3>Macaron noisette et chocolat</h3>
-                        <div class="menu__vignette__details">
-                            <p>Glace au caramel brun et sel de guérande</p>
-                            <p><strong>18€</strong></p>
+                    <div class="menu__vignette delay-7">
+                        <div class="menu__vignette__description">
+                            <h3></h3>
+                            <p></p>
                         </div>
+                        <div class="menu__vignette__prix"><strong>€</strong></div>
+                        <div class="menu__vignette__check"><i class="fas fa-check"></i></div>
                     </div>
                 </a>
                 <a href="#">
-                    <div class="menu__vignette">
-                        <h3>Baba au rhum revisité</h3>
-                        <div class="menu__vignette__details">
-                            <p>Avec son coulis de citron</p>
-                            <p><strong>22€</strong></p>
+                    <div class="menu__vignette delay-8">
+                        <div class="menu__vignette__description">
+                            <h3></h3>
+                            <p></p>
                         </div>
+                        <div class="menu__vignette__prix"><strong>€</strong></div>
+                        <div class="menu__vignette__check"><i class="fas fa-check"></i></div>
                     </div>
                 </a>
                 <a href="#">
-                    <div class="menu__vignette">
-                        <h3>Tarte au citron meringuée</h3>
-                        <div class="menu__vignette__details">
-                            <p>Déstrcuturée</p>
-                            <p><strong>23€</strong></p>
+                    <div class="menu__vignette delay-9">
+                        <div class="menu__vignette__description">
+                            <h3></h3>
+                            <p></p>
                         </div>
+                        <div class="menu__vignette__prix"><strong>€</strong></div>
+                        <div class="menu__vignette__check"><i class="fas fa-check"></i></div>
                     </div>
                 </a>
-            </div>
+            </article>
+
+            <!-- Button -->
             <a href="#">
                 <div class="menu__button"><button>Commander</button></div>
             </a>
-        </div>
+        </section>
     </body>
 
+    <!-- footer -->
     <footer>
         <h1>ohmyfood</h1>
-        <a href="#">
-            <p><i class="fa-solid fa-utensils"></i>Proposer un restaurant</p>
-        </a>
-        <a href="#">
-            <p><i class="fa-solid fa-handshake-angle"></i>Devenir partenaire</p>
-        </a>
-        <a href="#">
-            <p>Mentions légales</p>
-        </a>
-        <a href="#">
-            <p>Contact</p>
-        </a>
+        <a href="#"> <i class="fa-solid fa-utensils"></i>Proposer un restaurant </a>
+        <a href="#"> <i class="fa-solid fa-handshake-angle"></i>Devenir partenaire </a>
+        <a href="#"> Mentions légales </a>
+        <a href="mailto:aymerickbatlogg@gmail.com"> Contact </a>
     </footer>
 </html>
