--- a/index.html
+++ b/index.html
@@ -7,25 +7,26 @@
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&family=Shrikhand&display=swap" rel="stylesheet" />
-        <link rel="stylesheet" href="../css/style.css" />
+        <link rel="stylesheet" href="./css/style.css" />
         <script src="https://kit.fontawesome.com/59d113e09e.js" crossorigin="anonymous"></script>
         <title>ohmyfood</title>
     </head>
 
     <header class="header--accueil">
-        <img src="../images/logo/ohmyfood.png" alt="logo du site" />
+        <img src="./images/logo/ohmyfood.png" alt="logo du site" />
     </header>
 
     <body>
-        <div class="localisation">
+        <div class="loader"><i class="fa-solid fa-magnifying-glass"></i></i></div>
+        <section class="localisation">
             <p class="localisation__ville"><i class="fa-solid fa-location-dot"></i>Paris, Belleville</p>
-            <div class="localisation__find-restaurant">
+            <article class="localisation__find-restaurant">
                 <h2>Réserver le menu qui vous convient</h2>
                 <p>Découvrez des restaurants d'expection, selectionnés par nos soins.</p>
                 <a href="#"><button class="localisation__button">Explorer nos restaurants</button></a>
-            </div>
-        </div>
-        <div class="fonctionnement">
+            </article>
+        </section>
+        <section class="fonctionnement">
             <h2>Fonctionnement</h2>
             <a href="#">
                 <div class="fonctionnement__etapes">
@@ -45,12 +46,12 @@
                     <p><i class="fa-solid fa-store"></i>Degustez au restaurant</p>
                 </div>
             </a>
-        </div>
-        <div class="restaurant">
+        </section>
+        <section class="restaurant">
             <h2>Restaurants</h2>
-            <a href="#">
+            <a href="./pages HTML/laPaletteDuGout.html">
                 <div class="restaurant__vignette">
-                    <img src="../images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="photo du restaurantla palette du goût" />
+                    <img src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="photo du restaurantla palette du goût" />
                     <h3>La palette du goût</h3>
                     <p>Ménilmontant</p>
                     <span>Nouveau</span>
@@ -58,9 +59,9 @@
                     <i class="fa-solid fa-heart"></i>
                 </div>
             </a>
-            <a href="#">
+            <a href="./pages HTML/laNoteEnchantee.html">
                 <div class="restaurant__vignette">
-                    <img src="../images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="photo du restaurant la note enchantée " />
+                    <img src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="photo du restaurant la note enchantée " />
                     <h3>La note enchantée</h3>
                     <p>Charonne</p>
                     <span>Nouveau</span>
@@ -68,19 +69,19 @@
                     <i class="fa-solid fa-heart"></i>
                 </div>
             </a>
-            <a href="#">
+            <a href="./pages HTML/aLaFrancaise.html">
                 <div class="restaurant__vignette">
-                    <img src="../images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="photo du restaurant à la française" />
+                    <img src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="photo du restaurant à la française" />
                     <h3>À la française</h3>
                     <p>Cité Rouge</p>
                     <i class="fa-regular fa-heart"></i>
                     <i class="fa-solid fa-heart"></i>
                 </div>
             </a>
-            <a href="#">
+            <a href="./pages HTML/leDeliceDesSens.html">
                 <div class="restaurant__vignette">
                     <img
-                        src="../images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
+                        src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
                         alt="photo du restaurant le délice des sens" />
                     <h3>Le délice des sens</h3>
                     <p>Folie-Méricourt</p>
@@ -88,22 +89,22 @@
                     <i class="fa-solid fa-heart"></i>
                 </div>
             </a>
-        </div>
+        </section>
     </body>
 
     <footer>
         <h1>ohmyfood</h1>
         <a href="#">
-            <p><i class="fa-solid fa-utensils"></i>Proposer un restaurant</p>
+            <i class="fa-solid fa-utensils"></i>Proposer un restaurant
         </a>
         <a href="#">
-            <p><i class="fa-solid fa-handshake-angle"></i>Devenir partenaire</p>
+            <i class="fa-solid fa-handshake-angle"></i>Devenir partenaire
         </a>
         <a href="#">
-            <p>Mentions légales</p>
+            Mentions légales
         </a>
-        <a href="#">
-            <p>Contact</p>
+        <a href="mailto:aymerickbatlogg@gmail.com">
+            Contact
         </a>
     </footer>
 </html>
