--- a/pages HTML/AlaFrancaise.html
+++ b/pages HTML/AlaFrancaise.html
@@ -12,126 +12,140 @@
         <title>À la française</title>
     </head>
 
+    <!-- header -->
     <header class="header--menu">
-        <a href="./Accueil.html"><i class="fa-sharp fa-solid fa-arrow-left"></i></a>
+        <a href="../index.html"><i class="fa-sharp fa-solid fa-arrow-left"></i></a>
         <img src="../images/logo/ohmyfood.png" alt="logo du site" />
     </header>
 
+    <!-- body -->
     <body>
         <img class="photo-restaurant" src="../images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Photo du restaurant à la française" />
-        <div class="menu">
+
+        <!-- global section gathering all details of menu -->
+        <section class="menu">
             <h1 class="menu__title">À la française</h1>
             <i class="fa-regular fa-heart"></i>
             <i class="fa-solid fa-heart"></i>
-            <div class="menu__part">
+
+            <!-- first article gathering all item of menu's first part -->
+            <article class="menu__part">
                 <h2>ENTRÉES</h2>
                 <a href="#">
-                    <div class="menu__vignette">
-                        <h3>Tartare de poulpe acidulé</h3>
-                        <div class="menu__vignette__details">
+                    <div class="menu__vignette delay-1">
+                        <div class="menu__vignette__description">
+                            <h3>Tartare de poulpe acidulé</h3>
                             <p>Aux zestes d'orange</p>
-                            <p><strong>25€</strong></p>
                         </div>
+                        <div class="menu__vignette__prix"><strong>25€</strong></div>
+                        <div class="menu__vignette__check"><i class="fas fa-check"></i></div>
                     </div>
                 </a>
                 <a href="#">
-                    <div class="menu__vignette">
-                        <h3>Velouté de légumes d'antan</h3>
-                        <div class="menu__vignette__details">
-                            <p>Carotte, panais, topinambour</p>
-                            <p><strong>35€</strong></p>
+                    <div class="menu__vignette delay-2">
+                        <div class="menu__vignette__description">
+                            <h3></h3>
+                            <p></p>
                         </div>
+                        <div class="menu__vignette__prix"><strong>€</strong></div>
+                        <div class="menu__vignette__check"><i class="fas fa-check"></i></div>
                     </div>
                 </a>
                 <a href="#">
-                    <div class="menu__vignette">
-                        <h3>Soupe à l'oignon</h3>
-                        <div class="menu__vignette__details">
-                            <p>Revisitée</p>
-                            <p><strong>20€</strong></p>
+                    <div class="menu__vignette delay-3">
+                        <div class="menu__vignette__description">
+                            <h3></h3>
+                            <p></p>
                         </div>
+                        <div class="menu__vignette__prix"><strong>€</strong></div>
+                        <div class="menu__vignette__check"><i class="fas fa-check"></i></div>
                     </div>
                 </a>
-            </div>
-            <div class="menu__part">
+            </article>
+
+            <!-- second article gathering all item of menu's second part -->
+            <article class="menu__part">
                 <h2>PLATS</h2>
                 <a href="#">
-                    <div class="menu__vignette">
-                        <h3>Coquilles Saint-Jacques</h3>
-                        <div class="menu__vignette__details">
-                            <p>Accompagnées d'une purée de panais</p>
-                            <p><strong>40€</strong></p>
+                    <div class="menu__vignette delay-4">
+                        <div class="menu__vignette__description">
+                            <h3></h3>
+                            <p></p>
                         </div>
+                        <div class="menu__vignette__prix"><strong>€</strong></div>
+                        <div class="menu__vignette__check"><i class="fas fa-check"></i></div>
                     </div>
                 </a>
                 <a href="#">
-                    <div class="menu__vignette">
-                        <h3>Magret de canard</h3>
-                        <div class="menu__vignette__details">
-                            <p>Et parmentier de pommes de terre</p>
-                            <p><strong>35€</strong></p>
+                    <div class="menu__vignette delay-5">
+                        <div class="menu__vignette__description">
+                            <h3></h3>
+                            <p></p>
                         </div>
+                        <div class="menu__vignette__prix"><strong>€</strong></div>
+                        <div class="menu__vignette__check"><i class="fas fa-check"></i></div>
                     </div>
                 </a>
                 <a href="#">
-                    <div class="menu__vignette">
-                        <h3>Pigeonneau d'Ille-et-Vilaine</h3>
-                        <div class="menu__vignette__details">
-                            <p>Sur son lit de gnocchis aux légumes</p>
-                            <p><strong>44€</strong></p>
+                    <div class="menu__vignette delay-6">
+                        <div class="menu__vignette__description">
+                            <h3></h3>
+                            <p></p>
                         </div>
+                        <div class="menu__vignette__prix"><strong>€</strong></div>
+                        <div class="menu__vignette__check"><i class="fas fa-check"></i></div>
                     </div>
                 </a>
-            </div>
-            <div class="menu__part">
+            </article>
+
+            <!-- third article gathering all item of menu's third part -->
+            <article class="menu__part">
                 <h2>DESSERTS</h2>
                 <a href="#">
-                    <div class="menu__vignette">
-                        <h3>Pétales de violettes glacés</h3>
-                        <div class="menu__vignette__details">
-                            <p>Et purée de noisettes</p>
-                            <p><strong>18€</strong></p>
+                    <div class="menu__vignette delay-7">
+                        <div class="menu__vignette__description">
+                            <h3></h3>
+                            <p></p>
                         </div>
+                        <div class="menu__vignette__prix"><strong>€</strong></div>
+                        <div class="menu__vignette__check"><i class="fas fa-check"></i></div>
                     </div>
                 </a>
                 <a href="#">
-                    <div class="menu__vignette">
-                        <h3>Fondant au chocolat</h3>
-                        <div class="menu__vignette__details">
-                            <p>Revisité</p>
-                            <p><strong>22€</strong></p>
+                    <div class="menu__vignette delay-8">
+                        <div class="menu__vignette__description">
+                            <h3></h3>
+                            <p></p>
                         </div>
+                        <div class="menu__vignette__prix"><strong>€</strong></div>
+                        <div class="menu__vignette__check"><i class="fas fa-check"></i></div>
                     </div>
                 </a>
                 <a href="#">
-                    <div class="menu__vignette">
-                        <h3>Millefeuille croustillant</h3>
-                        <div class="menu__vignette__details">
-                            <p>Myrtilles et pâte d'amande</p>
-                            <p><strong>23€</strong></p>
+                    <div class="menu__vignette delay-9">
+                        <div class="menu__vignette__description">
+                            <h3></h3>
+                            <p></p>
                         </div>
+                        <div class="menu__vignette__prix"><strong>€</strong></div>
+                        <div class="menu__vignette__check"><i class="fas fa-check"></i></div>
                     </div>
                 </a>
-            </div>
+            </article>
+
+            <!-- Button -->
             <a href="#">
                 <div class="menu__button"><button>Commander</button></div>
             </a>
-        </div>
+        </section>
     </body>
 
+    <!-- footer -->
     <footer>
         <h1>ohmyfood</h1>
-        <a href="#">
-            <p><i class="fa-solid fa-utensils"></i>Proposer un restaurant</p>
-        </a>
-        <a href="#">
-            <p><i class="fa-solid fa-handshake-angle"></i>Devenir partenaire</p>
-        </a>
-        <a href="#">
-            <p>Mentions légales</p>
-        </a>
-        <a href="#">
-            <p>Contact</p>
-        </a>
+        <a href="#"> <i class="fa-solid fa-utensils"></i>Proposer un restaurant </a>
+        <a href="#"> <i class="fa-solid fa-handshake-angle"></i>Devenir partenaire </a>
+        <a href="#"> Mentions légales </a>
+        <a href="mailto:aymerickbatlogg@gmail.com"> Contact </a>
     </footer>
 </html>
