--- a/pages HTML/laPaletteDuGout.html
+++ b/pages HTML/laPaletteDuGout.html
@@ -9,132 +9,143 @@
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&family=Shrikhand&display=swap" rel="stylesheet" />
         <link rel="stylesheet" href="../css/style.css" />
         <script src="https://kit.fontawesome.com/59d113e09e.js" crossorigin="anonymous"></script>
-        <title>La palette du goût</title>
+        <title>À la française</title>
     </head>
 
+    <!-- header -->
     <header class="header--menu">
-        <a href="./Accueil.html"><i class="fa-sharp fa-solid fa-arrow-left"></i></a>
+        <a href="../index.html"><i class="fa-sharp fa-solid fa-arrow-left"></i></a>
         <img src="../images/logo/ohmyfood.png" alt="logo du site" />
     </header>
 
+    <!-- body -->
     <body>
-        <img
-            class="photo-restaurant"
-            src="../images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
-            alt="photo du restaurantla palette du goût" />
-        <div class="menu">
-            <h1 class="menu__title">La palette du gout</h1>
+        <img class="photo-restaurant" src="../images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Photo du restaurant à la française" />
+
+        <!-- global section gathering all details of menu -->
+        <section class="menu">
+            <h1 class="menu__title">À la française</h1>
             <i class="fa-regular fa-heart"></i>
             <i class="fa-solid fa-heart"></i>
-            <div class="menu__part">
+
+            <!-- first article gathering all item of menu's first part -->
+            <article class="menu__part">
                 <h2>ENTRÉES</h2>
                 <a href="#">
-                    <div class="menu__vignette">
-                        <h3>Fricassée d'escargots</h3>
-                        <div class="menu__vignette__details">
-                            <p>Au piment d'Espelette</p>
-                            <p><strong>25€</strong></p>
+                    <div class="menu__vignette delay-1">
+                        <div class="menu__vignette__description">
+                            <h3>Tartare de poulpe acidulé</h3>
+                            <p>Aux zestes d'orange</p>
                         </div>
+                        <div class="menu__vignette__prix"><strong>25€</strong></div>
+                        <div class="menu__vignette__check"><i class="fas fa-check"></i></div>
                     </div>
                 </a>
                 <a href="#">
-                    <div class="menu__vignette">
-                        <h3>Foie gras de canard mi-cuit</h3>
-                        <div class="menu__vignette__details">
-                            <p>Et ses copeaux de truffe noire</p>
-                            <p><strong>35€</strong></p>
+                    <div class="menu__vignette delay-2">
+                        <div class="menu__vignette__description">
+                            <h3></h3>
+                            <p></p>
                         </div>
+                        <div class="menu__vignette__prix"><strong>€</strong></div>
+                        <div class="menu__vignette__check"><i class="fas fa-check"></i></div>
                     </div>
                 </a>
                 <a href="#">
-                    <div class="menu__vignette">
-                        <h3>Œeuf au plat</h3>
-                        <div class="menu__vignette__details">
-                            <p>Assaisonné à la truffe sur lit de caviar</p>
-                            <p><strong>20€</strong></p>
+                    <div class="menu__vignette delay-3">
+                        <div class="menu__vignette__description">
+                            <h3></h3>
+                            <p></p>
                         </div>
+                        <div class="menu__vignette__prix"><strong>€</strong></div>
+                        <div class="menu__vignette__check"><i class="fas fa-check"></i></div>
                     </div>
                 </a>
-            </div>
-            <div class="menu__part">
+            </article>
+
+            <!-- second article gathering all item of menu's second part -->
+            <article class="menu__part">
                 <h2>PLATS</h2>
                 <a href="#">
-                    <div class="menu__vignette">
-                        <h3>Filet de bœuf aux herbes</h3>
-                        <div class="menu__vignette__details">
-                            <p>Accompagné de sa ribambelle de légume</p>
-                            <p><strong>40€</strong></p>
+                    <div class="menu__vignette delay-4">
+                        <div class="menu__vignette__description">
+                            <h3></h3>
+                            <p></p>
                         </div>
+                        <div class="menu__vignette__prix"><strong>€</strong></div>
+                        <div class="menu__vignette__check"><i class="fas fa-check"></i></div>
                     </div>
                 </a>
                 <a href="#">
-                    <div class="menu__vignette">
-                        <h3>Parmantier de queue de bœuf</h3>
-                        <div class="menu__vignette__details">
-                            <p>À la truffe noire sur sa purée de panais</p>
-                            <p><strong>35€</strong></p>
+                    <div class="menu__vignette delay-5">
+                        <div class="menu__vignette__description">
+                            <h3></h3>
+                            <p></p>
                         </div>
+                        <div class="menu__vignette__prix"><strong>€</strong></div>
+                        <div class="menu__vignette__check"><i class="fas fa-check"></i></div>
                     </div>
                 </a>
                 <a href="#">
-                    <div class="menu__vignette">
-                        <h3>Filet de turbot</h3>
-                        <div class="menu__vignette__details">
-                            <p>Aux agrumes</p>
-                            <p><strong>44€</strong></p>
+                    <div class="menu__vignette delay-6">
+                        <div class="menu__vignette__description">
+                            <h3></h3>
+                            <p></p>
                         </div>
+                        <div class="menu__vignette__prix"><strong>€</strong></div>
+                        <div class="menu__vignette__check"><i class="fas fa-check"></i></div>
                     </div>
                 </a>
-            </div>
-            <div class="menu__part">
+            </article>
+
+            <!-- third article gathering all item of menu's third part -->
+            <article class="menu__part">
                 <h2>DESSERTS</h2>
                 <a href="#">
-                    <div class="menu__vignette">
-                        <h3>Paris-Brest</h3>
-                        <div class="menu__vignette__details">
-                            <p>Revisité</p>
-                            <p><strong>€</strong></p>
+                    <div class="menu__vignette delay-7">
+                        <div class="menu__vignette__description">
+                            <h3></h3>
+                            <p></p>
                         </div>
+                        <div class="menu__vignette__prix"><strong>€</strong></div>
+                        <div class="menu__vignette__check"><i class="fas fa-check"></i></div>
                     </div>
                 </a>
                 <a href="#">
-                    <div class="menu__vignette">
-                        <h3>Macaron au chocolat d'excpetion</h3>
-                        <div class="menu__vignette__details">
-                            <p>Et glace à la vanille de Madagascar</p>
-                            <p><strong>22€</strong></p>
+                    <div class="menu__vignette delay-8">
+                        <div class="menu__vignette__description">
+                            <h3></h3>
+                            <p></p>
                         </div>
+                        <div class="menu__vignette__prix"><strong>€</strong></div>
+                        <div class="menu__vignette__check"><i class="fas fa-check"></i></div>
                     </div>
                 </a>
                 <a href="#">
-                    <div class="menu__vignette">
-                        <h3>Mousse au chocolat</h3>
-                        <div class="menu__vignette__details">
-                            <p>Au piment d'Espelette et à la truffe noire</p>
-                            <p><strong>23€</strong></p>
+                    <div class="menu__vignette delay-9">
+                        <div class="menu__vignette__description">
+                            <h3></h3>
+                            <p></p>
                         </div>
+                        <div class="menu__vignette__prix"><strong>€</strong></div>
+                        <div class="menu__vignette__check"><i class="fas fa-check"></i></div>
                     </div>
                 </a>
-            </div>
+            </article>
+
+            <!-- Button -->
             <a href="#">
                 <div class="menu__button"><button>Commander</button></div>
             </a>
-        </div>
+        </section>
     </body>
 
+    <!-- footer -->
     <footer>
         <h1>ohmyfood</h1>
-        <a href="#">
-            <p><i class="fa-solid fa-utensils"></i>Proposer un restaurant</p>
-        </a>
-        <a href="#">
-            <p><i class="fa-solid fa-handshake-angle"></i>Devenir partenaire</p>
-        </a>
-        <a href="#">
-            <p>Mentions légales</p>
-        </a>
-        <a href="#">
-            <p>Contact</p>
-        </a>
+        <a href="#"> <i class="fa-solid fa-utensils"></i>Proposer un restaurant </a>
+        <a href="#"> <i class="fa-solid fa-handshake-angle"></i>Devenir partenaire </a>
+        <a href="#"> Mentions légales </a>
+        <a href="mailto:aymerickbatlogg@gmail.com"> Contact </a>
     </footer>
 </html>
