mise à jour du contenue html de chaque resta urant

--- a/pages HTML/laNoteEnchantee.html
+++ b/pages HTML/laNoteEnchantee.html
@@ -9,7 +9,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&family=Shrikhand&display=swap" rel="stylesheet" />
         <link rel="stylesheet" href="../css/style.css" />
         <script src="https://kit.fontawesome.com/59d113e09e.js" crossorigin="anonymous"></script>
-        <title>À la française</title>
+        <title>La note enchantée</title>
     </head>
 
     <!-- header -->
@@ -24,7 +24,7 @@
 
         <!-- global section gathering all details of menu -->
         <section class="menu">
-            <h1 class="menu__title">À la française</h1>
+            <h1 class="menu__title">La note enchantée</h1>
             <i class="fa-regular fa-heart"></i>
             <i class="fa-solid fa-heart"></i>
 
@@ -34,8 +34,8 @@
                 <a href="#">
                     <div class="menu__vignette delay-1">
                         <div class="menu__vignette__description">
-                            <h3>Tartare de poulpe acidulé</h3>
-                            <p>Aux zestes d'orange</p>
+                            <h3>Ravioles de foie gras</h3>
+                            <p>Accompagnés de leur crème à la truffe</p>
                         </div>
                         <div class="menu__vignette__prix"><strong>25€</strong></div>
                         <div class="menu__vignette__check"><i class="fas fa-check"></i></div>
@@ -44,20 +44,30 @@
                 <a href="#">
                     <div class="menu__vignette delay-2">
                         <div class="menu__vignette__description">
-                            <h3></h3>
-                            <p></p>
+                            <h3>Caviar osciètre</h3>
+                            <p>Sur blini à la farine de blé noir</p>
                         </div>
-                        <div class="menu__vignette__prix"><strong>€</strong></div>
+                        <div class="menu__vignette__prix"><strong>35€</strong></div>
                         <div class="menu__vignette__check"><i class="fas fa-check"></i></div>
                     </div>
                 </a>
                 <a href="#">
                     <div class="menu__vignette delay-3">
                         <div class="menu__vignette__description">
-                            <h3></h3>
-                            <p></p>
+                            <h3>Homard et espuma de potiron</h3>
+                            <p>Mariné aux zestes d'orange</p>
                         </div>
-                        <div class="menu__vignette__prix"><strong>€</strong></div>
+                        <div class="menu__vignette__prix"><strong>20€</strong></div>
+                        <div class="menu__vignette__check"><i class="fas fa-check"></i></div>
+                    </div>
+                </a>
+                <a href="#">
+                    <div class="menu__vignette delay-4">
+                        <div class="menu__vignette__description">
+                            <h3>Foie gras de canard cuit entier</h3>
+                            <p>Confiture de figue et pain toasté</p>
+                        </div>
+                        <div class="menu__vignette__prix"><strong>35€</strong></div>
                         <div class="menu__vignette__check"><i class="fas fa-check"></i></div>
                     </div>
                 </a>
@@ -67,32 +77,32 @@
             <article class="menu__part">
                 <h2>PLATS</h2>
                 <a href="#">
-                    <div class="menu__vignette delay-4">
-                        <div class="menu__vignette__description">
-                            <h3></h3>
-                            <p></p>
-                        </div>
-                        <div class="menu__vignette__prix"><strong>€</strong></div>
-                        <div class="menu__vignette__check"><i class="fas fa-check"></i></div>
-                    </div>
-                </a>
-                <a href="#">
                     <div class="menu__vignette delay-5">
                         <div class="menu__vignette__description">
-                            <h3></h3>
-                            <p></p>
+                            <h3>Noix de coquilles Saint-Jacques</h3>
+                            <p>Sur lit de purée de céleri-rave</p>
                         </div>
-                        <div class="menu__vignette__prix"><strong>€</strong></div>
+                        <div class="menu__vignette__prix"><strong>40€</strong></div>
                         <div class="menu__vignette__check"><i class="fas fa-check"></i></div>
                     </div>
                 </a>
                 <a href="#">
                     <div class="menu__vignette delay-6">
                         <div class="menu__vignette__description">
-                            <h3></h3>
-                            <p></p>
+                            <h3>Langoustine poêlée</h3>
+                            <p>Purée de patate douce</p>
                         </div>
-                        <div class="menu__vignette__prix"><strong>€</strong></div>
+                        <div class="menu__vignette__prix"><strong>35€</strong></div>
+                        <div class="menu__vignette__check"><i class="fas fa-check"></i></div>
+                    </div>
+                </a>
+                <a href="#">
+                    <div class="menu__vignette delay-7">
+                        <div class="menu__vignette__description">
+                            <h3>Mijoté de queue de boeuf</h3>
+                            <p>Et riz sauvage aux zestes de citron</p>
+                        </div>
+                        <div class="menu__vignette__prix"><strong>44€</strong></div>
                         <div class="menu__vignette__check"><i class="fas fa-check"></i></div>
                     </div>
                 </a>
@@ -102,32 +112,32 @@
             <article class="menu__part">
                 <h2>DESSERTS</h2>
                 <a href="#">
-                    <div class="menu__vignette delay-7">
-                        <div class="menu__vignette__description">
-                            <h3></h3>
-                            <p></p>
-                        </div>
-                        <div class="menu__vignette__prix"><strong>€</strong></div>
-                        <div class="menu__vignette__check"><i class="fas fa-check"></i></div>
-                    </div>
-                </a>
-                <a href="#">
                     <div class="menu__vignette delay-8">
                         <div class="menu__vignette__description">
-                            <h3></h3>
-                            <p></p>
+                            <h3>Macaron noisette et chocolat</h3>
+                            <p>Glace au caramel brun et sel de Guérande</p>
                         </div>
-                        <div class="menu__vignette__prix"><strong>€</strong></div>
+                        <div class="menu__vignette__prix"><strong>18€</strong></div>
                         <div class="menu__vignette__check"><i class="fas fa-check"></i></div>
                     </div>
                 </a>
                 <a href="#">
                     <div class="menu__vignette delay-9">
                         <div class="menu__vignette__description">
-                            <h3></h3>
-                            <p></p>
+                            <h3>Baba au rhum revisité</h3>
+                            <p>Avec son coulis de citron</p>
                         </div>
-                        <div class="menu__vignette__prix"><strong>€</strong></div>
+                        <div class="menu__vignette__prix"><strong>18€</strong></div>
+                        <div class="menu__vignette__check"><i class="fas fa-check"></i></div>
+                    </div>
+                </a>
+                <a href="#">
+                    <div class="menu__vignette delay-10">
+                        <div class="menu__vignette__description">
+                            <h3>Tarte au citron meringuée</h3>
+                            <p>Déstructurée</p>
+                        </div>
+                        <div class="menu__vignette__prix"><strong>23€</strong></div>
                         <div class="menu__vignette__check"><i class="fas fa-check"></i></div>
                     </div>
                 </a>
