--- a/pages HTML/AlaFrancaise.html
+++ b/pages HTML/AlaFrancaise.html
@@ -44,20 +44,20 @@
                 <a href="#">
                     <div class="menu__vignette delay-2">
                         <div class="menu__vignette__description">
-                            <h3></h3>
-                            <p></p>
+                            <h3>Velouté de légumes d'antan</h3>
+                            <p>Carotte, panais, topinambour</p>
                         </div>
-                        <div class="menu__vignette__prix"><strong>€</strong></div>
+                        <div class="menu__vignette__prix"><strong>35€</strong></div>
                         <div class="menu__vignette__check"><i class="fas fa-check"></i></div>
                     </div>
                 </a>
                 <a href="#">
                     <div class="menu__vignette delay-3">
                         <div class="menu__vignette__description">
-                            <h3></h3>
-                            <p></p>
+                            <h3>Soupe à l'oignon</h3>
+                            <p>Revisitée</p>
                         </div>
-                        <div class="menu__vignette__prix"><strong>€</strong></div>
+                        <div class="menu__vignette__prix"><strong>20€</strong></div>
                         <div class="menu__vignette__check"><i class="fas fa-check"></i></div>
                     </div>
                 </a>
@@ -69,30 +69,30 @@
                 <a href="#">
                     <div class="menu__vignette delay-4">
                         <div class="menu__vignette__description">
-                            <h3></h3>
-                            <p></p>
+                            <h3>Coquilles Saint-Jacques</h3>
+                            <p>Accompagnées d'une purée de panais</p>
                         </div>
-                        <div class="menu__vignette__prix"><strong>€</strong></div>
+                        <div class="menu__vignette__prix"><strong>40€</strong></div>
                         <div class="menu__vignette__check"><i class="fas fa-check"></i></div>
                     </div>
                 </a>
                 <a href="#">
                     <div class="menu__vignette delay-5">
                         <div class="menu__vignette__description">
-                            <h3></h3>
-                            <p></p>
+                            <h3>Magret de canard</h3>
+                            <p>Et parmentier de pommes de terre</p>
                         </div>
-                        <div class="menu__vignette__prix"><strong>€</strong></div>
+                        <div class="menu__vignette__prix"><strong>35€</strong></div>
                         <div class="menu__vignette__check"><i class="fas fa-check"></i></div>
                     </div>
                 </a>
                 <a href="#">
                     <div class="menu__vignette delay-6">
                         <div class="menu__vignette__description">
-                            <h3></h3>
-                            <p></p>
+                            <h3>Pigeonneau d’Ille-et-Vilaine</h3>
+                            <p>Sur son lit de gnocchis aux légumes</p>
                         </div>
-                        <div class="menu__vignette__prix"><strong>€</strong></div>
+                        <div class="menu__vignette__prix"><strong>44€</strong></div>
                         <div class="menu__vignette__check"><i class="fas fa-check"></i></div>
                     </div>
                 </a>
@@ -104,30 +104,30 @@
                 <a href="#">
                     <div class="menu__vignette delay-7">
                         <div class="menu__vignette__description">
-                            <h3></h3>
-                            <p></p>
+                            <h3>Pétales de violettes glacés</h3>
+                            <p>Et purée de noisettes</p>
                         </div>
-                        <div class="menu__vignette__prix"><strong>€</strong></div>
+                        <div class="menu__vignette__prix"><strong>18€</strong></div>
                         <div class="menu__vignette__check"><i class="fas fa-check"></i></div>
                     </div>
                 </a>
                 <a href="#">
                     <div class="menu__vignette delay-8">
                         <div class="menu__vignette__description">
-                            <h3></h3>
-                            <p></p>
+                            <h3>Fondant au chocolat</h3>
+                            <p>Revisité</p>
                         </div>
-                        <div class="menu__vignette__prix"><strong>€</strong></div>
+                        <div class="menu__vignette__prix"><strong>22€</strong></div>
                         <div class="menu__vignette__check"><i class="fas fa-check"></i></div>
                     </div>
                 </a>
                 <a href="#">
                     <div class="menu__vignette delay-9">
                         <div class="menu__vignette__description">
-                            <h3></h3>
-                            <p></p>
+                            <h3>Millefeuille croustillant</h3>
+                            <p>Myrtilles et pâte d’amande</p>
                         </div>
-                        <div class="menu__vignette__prix"><strong>€</strong></div>
+                        <div class="menu__vignette__prix"><strong>23€</strong></div>
                         <div class="menu__vignette__check"><i class="fas fa-check"></i></div>
                     </div>
                 </a>
