--- a/pages HTML/laPaletteDuGout.html
+++ b/pages HTML/laPaletteDuGout.html
@@ -9,7 +9,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&family=Shrikhand&display=swap" rel="stylesheet" />
         <link rel="stylesheet" href="../css/style.css" />
         <script src="https://kit.fontawesome.com/59d113e09e.js" crossorigin="anonymous"></script>
-        <title>À la française</title>
+        <title>La palette du goût</title>
     </head>
 
     <!-- header -->
@@ -24,7 +24,7 @@
 
         <!-- global section gathering all details of menu -->
         <section class="menu">
-            <h1 class="menu__title">À la française</h1>
+            <h1 class="menu__title">La palette du goût</h1>
             <i class="fa-regular fa-heart"></i>
             <i class="fa-solid fa-heart"></i>
 
@@ -34,8 +34,8 @@
                 <a href="#">
                     <div class="menu__vignette delay-1">
                         <div class="menu__vignette__description">
-                            <h3>Tartare de poulpe acidulé</h3>
-                            <p>Aux zestes d'orange</p>
+                            <h3>Fricassée d'escargot</h3>
+                            <p>Au piment d'Espelette</p>
                         </div>
                         <div class="menu__vignette__prix"><strong>25€</strong></div>
                         <div class="menu__vignette__check"><i class="fas fa-check"></i></div>
@@ -44,20 +44,20 @@
                 <a href="#">
                     <div class="menu__vignette delay-2">
                         <div class="menu__vignette__description">
-                            <h3></h3>
-                            <p></p>
+                            <h3>Foie gras de canard mi-cuit</h3>
+                            <p>Et ses copeaux de truffe noire</p>
                         </div>
-                        <div class="menu__vignette__prix"><strong>€</strong></div>
+                        <div class="menu__vignette__prix"><strong>35€</strong></div>
                         <div class="menu__vignette__check"><i class="fas fa-check"></i></div>
                     </div>
                 </a>
                 <a href="#">
                     <div class="menu__vignette delay-3">
                         <div class="menu__vignette__description">
-                            <h3></h3>
-                            <p></p>
+                            <h3>Œuf au plat</h3>
+                            <p>Assaisonné à la truffe sur lit de caviar</p>
                         </div>
-                        <div class="menu__vignette__prix"><strong>€</strong></div>
+                        <div class="menu__vignette__prix"><strong>20€</strong></div>
                         <div class="menu__vignette__check"><i class="fas fa-check"></i></div>
                     </div>
                 </a>
@@ -69,30 +69,30 @@
                 <a href="#">
                     <div class="menu__vignette delay-4">
                         <div class="menu__vignette__description">
-                            <h3></h3>
-                            <p></p>
+                            <h3>Filet de boeuf aux herbes</h3>
+                            <p>Accompagné de sa ribambelle de légumes</p>
                         </div>
-                        <div class="menu__vignette__prix"><strong>€</strong></div>
+                        <div class="menu__vignette__prix"><strong>40€</strong></div>
                         <div class="menu__vignette__check"><i class="fas fa-check"></i></div>
                     </div>
                 </a>
                 <a href="#">
                     <div class="menu__vignette delay-5">
                         <div class="menu__vignette__description">
-                            <h3></h3>
-                            <p></p>
+                            <h3>Parmentier de queue de boeuf</h3>
+                            <p>À la truffe noire sur sa purée de panais</p>
                         </div>
-                        <div class="menu__vignette__prix"><strong>€</strong></div>
+                        <div class="menu__vignette__prix"><strong>35€</strong></div>
                         <div class="menu__vignette__check"><i class="fas fa-check"></i></div>
                     </div>
                 </a>
                 <a href="#">
                     <div class="menu__vignette delay-6">
                         <div class="menu__vignette__description">
-                            <h3></h3>
-                            <p></p>
+                            <h3>Filet de turbot</h3>
+                            <p>Aux agrumes</p>
                         </div>
-                        <div class="menu__vignette__prix"><strong>€</strong></div>
+                        <div class="menu__vignette__prix"><strong>44€</strong></div>
                         <div class="menu__vignette__check"><i class="fas fa-check"></i></div>
                     </div>
                 </a>
@@ -104,30 +104,30 @@
                 <a href="#">
                     <div class="menu__vignette delay-7">
                         <div class="menu__vignette__description">
-                            <h3></h3>
-                            <p></p>
+                            <h3>Paris-Brest</h3>
+                            <p>Revisité</p>
                         </div>
-                        <div class="menu__vignette__prix"><strong>€</strong></div>
+                        <div class="menu__vignette__prix"><strong>18€</strong></div>
                         <div class="menu__vignette__check"><i class="fas fa-check"></i></div>
                     </div>
                 </a>
                 <a href="#">
                     <div class="menu__vignette delay-8">
                         <div class="menu__vignette__description">
-                            <h3></h3>
-                            <p></p>
+                            <h3>Macaron au chocolat d'exception</h3>
+                            <p>Et glace à la vanille de Madagascar</p>
                         </div>
-                        <div class="menu__vignette__prix"><strong>€</strong></div>
+                        <div class="menu__vignette__prix"><strong>22€</strong></div>
                         <div class="menu__vignette__check"><i class="fas fa-check"></i></div>
                     </div>
                 </a>
                 <a href="#">
                     <div class="menu__vignette delay-9">
                         <div class="menu__vignette__description">
-                            <h3></h3>
-                            <p></p>
+                            <h3>Mousse au chocolat</h3>
+                            <p>Au piment d'Espelette et à la truffe noire</p>
                         </div>
-                        <div class="menu__vignette__prix"><strong>€</strong></div>
+                        <div class="menu__vignette__prix"><strong>23€</strong></div>
                         <div class="menu__vignette__check"><i class="fas fa-check"></i></div>
                     </div>
                 </a>
