--- a/pages HTML/leDeliceDesSens.html
+++ b/pages HTML/leDeliceDesSens.html
@@ -9,7 +9,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&family=Shrikhand&display=swap" rel="stylesheet" />
         <link rel="stylesheet" href="../css/style.css" />
         <script src="https://kit.fontawesome.com/59d113e09e.js" crossorigin="anonymous"></script>
-        <title>À la française</title>
+        <title>Le délice des sens</title>
     </head>
 
     <!-- header -->
@@ -24,7 +24,7 @@
 
         <!-- global section gathering all details of menu -->
         <section class="menu">
-            <h1 class="menu__title">À la française</h1>
+            <h1 class="menu__title">Le délice des sens</h1>
             <i class="fa-regular fa-heart"></i>
             <i class="fa-solid fa-heart"></i>
 
@@ -34,8 +34,8 @@
                 <a href="#">
                     <div class="menu__vignette delay-1">
                         <div class="menu__vignette__description">
-                            <h3>Tartare de poulpe acidulé</h3>
-                            <p>Aux zestes d'orange</p>
+                            <h3>Tartare de thon</h3>
+                            <p>Assaisonné au yuzu</p>
                         </div>
                         <div class="menu__vignette__prix"><strong>25€</strong></div>
                         <div class="menu__vignette__check"><i class="fas fa-check"></i></div>
@@ -44,20 +44,20 @@
                 <a href="#">
                     <div class="menu__vignette delay-2">
                         <div class="menu__vignette__description">
-                            <h3></h3>
-                            <p></p>
+                            <h3>Bouchée de homard croustillant</h3>
+                            <p>Et sa farandole de petits légumes</p>
                         </div>
-                        <div class="menu__vignette__prix"><strong>€</strong></div>
+                        <div class="menu__vignette__prix"><strong>35€</strong></div>
                         <div class="menu__vignette__check"><i class="fas fa-check"></i></div>
                     </div>
                 </a>
                 <a href="#">
                     <div class="menu__vignette delay-3">
                         <div class="menu__vignette__description">
-                            <h3></h3>
-                            <p></p>
+                            <h3>Velouté de cèpes</h3>
+                            <p>Aux truffes</p>
                         </div>
-                        <div class="menu__vignette__prix"><strong>€</strong></div>
+                        <div class="menu__vignette__prix"><strong>20€</strong></div>
                         <div class="menu__vignette__check"><i class="fas fa-check"></i></div>
                     </div>
                 </a>
@@ -69,30 +69,30 @@
                 <a href="#">
                     <div class="menu__vignette delay-4">
                         <div class="menu__vignette__description">
-                            <h3></h3>
-                            <p></p>
+                            <h3>Poulet rôti aux herbes de Provence</h3>
+                            <p>Et sa crème de truffe</p>
                         </div>
-                        <div class="menu__vignette__prix"><strong>€</strong></div>
+                        <div class="menu__vignette__prix"><strong>40€</strong></div>
                         <div class="menu__vignette__check"><i class="fas fa-check"></i></div>
                     </div>
                 </a>
                 <a href="#">
                     <div class="menu__vignette delay-5">
                         <div class="menu__vignette__description">
-                            <h3></h3>
-                            <p></p>
+                            <h3>Langouste rôtie</h3>
+                            <p>Et ses légumes de saison</p>
                         </div>
-                        <div class="menu__vignette__prix"><strong>€</strong></div>
+                        <div class="menu__vignette__prix"><strong>35€</strong></div>
                         <div class="menu__vignette__check"><i class="fas fa-check"></i></div>
                     </div>
                 </a>
                 <a href="#">
                     <div class="menu__vignette delay-6">
                         <div class="menu__vignette__description">
-                            <h3></h3>
-                            <p></p>
+                            <h3>Côte de boeuf Angus</h3>
+                            <p>Et sa purée de panais</p>
                         </div>
-                        <div class="menu__vignette__prix"><strong>€</strong></div>
+                        <div class="menu__vignette__prix"><strong>44€</strong></div>
                         <div class="menu__vignette__check"><i class="fas fa-check"></i></div>
                     </div>
                 </a>
@@ -104,30 +104,30 @@
                 <a href="#">
                     <div class="menu__vignette delay-7">
                         <div class="menu__vignette__description">
-                            <h3></h3>
-                            <p></p>
+                            <h3>Farandole de desserts</h3>
+                            <p>Du chef</p>
                         </div>
-                        <div class="menu__vignette__prix"><strong>€</strong></div>
+                        <div class="menu__vignette__prix"><strong>18€</strong></div>
                         <div class="menu__vignette__check"><i class="fas fa-check"></i></div>
                     </div>
                 </a>
                 <a href="#">
                     <div class="menu__vignette delay-8">
                         <div class="menu__vignette__description">
-                            <h3></h3>
-                            <p></p>
+                            <h3>Crème brulée</h3>
+                            <p>Revisitée</p>
                         </div>
-                        <div class="menu__vignette__prix"><strong>€</strong></div>
+                        <div class="menu__vignette__prix"><strong>22€</strong></div>
                         <div class="menu__vignette__check"><i class="fas fa-check"></i></div>
                     </div>
                 </a>
                 <a href="#">
                     <div class="menu__vignette delay-9">
                         <div class="menu__vignette__description">
-                            <h3></h3>
-                            <p></p>
+                            <h3>Tiramisu</h3>
+                            <p>À la noisette</p>
                         </div>
-                        <div class="menu__vignette__prix"><strong>€</strong></div>
+                        <div class="menu__vignette__prix"><strong>23€</strong></div>
                         <div class="menu__vignette__check"><i class="fas fa-check"></i></div>
                     </div>
                 </a>
