commit de changement mineur avant changement de branche

--- a/pages HTML/laPaletteDuGout.html
+++ b/pages HTML/laPaletteDuGout.html
@@ -20,7 +20,7 @@
 
     <!-- body -->
     <body>
-        <img class="photo-restaurant" src="../images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Photo du restaurant à la française" />
+        <img class="photo-restaurant" src="../images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Photo du restaurant la palette du goût" />
 
         <!-- global section gathering all details of menu -->
         <section class="menu">
