--- a/pages HTML/leDeliceDesSens.html
+++ b/pages HTML/leDeliceDesSens.html
@@ -20,7 +20,7 @@
 
     <!-- body -->
     <body>
-        <img class="photo-restaurant" src="../images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Photo du restaurant à la française" />
+        <img class="photo-restaurant" src="../images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Photo du restaurant le delice des sens" />
 
         <!-- global section gathering all details of menu -->
         <section class="menu">
