--- a/pages HTML/laNoteEnchantee.html
+++ b/pages HTML/laNoteEnchantee.html
@@ -20,7 +20,7 @@
 
     <!-- body -->
     <body>
-        <img class="photo-restaurant" src="../images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Photo du restaurant à la française" />
+        <img class="photo-restaurant" src="../images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Photo du restaurant la note enchantée" />
 
         <!-- global section gathering all details of menu -->
         <section class="menu">
