--- a/index.html
+++ b/index.html
@@ -17,7 +17,16 @@
     </header>
 
     <body>
-        <div class="loader"><i class="fa-solid fa-magnifying-glass"></i></i></div>
+        <section class="loader">
+            <div class="loader__icone--visible">
+                <div class="loader__icone--hidden">
+                    <i class="fa-solid fa-utensils"></i>
+                    <i class="fa-solid fa-store"></i>
+                    <i class="fa-solid fa-magnifying-glass"></i>
+                </div>
+            </div>
+        </section>
+
         <section class="localisation">
             <p class="localisation__ville"><i class="fa-solid fa-location-dot"></i>Paris, Belleville</p>
             <article class="localisation__find-restaurant">
@@ -26,6 +35,7 @@
                 <a href="#"><button class="localisation__button">Explorer nos restaurants</button></a>
             </article>
         </section>
+
         <section class="fonctionnement">
             <h2>Fonctionnement</h2>
             <a href="#">
@@ -47,6 +57,7 @@
                 </div>
             </a>
         </section>
+        
         <section class="restaurant">
             <h2>Restaurants</h2>
             <a href="./pages HTML/laPaletteDuGout.html">
