--- a/pages HTML/laNoteEnchantee.html
+++ b/pages HTML/laNoteEnchantee.html
@@ -24,9 +24,7 @@
 
         <!-- global section gathering all details of menu -->
         <section class="menu">
-            <h1 class="menu__title">La note enchantée</h1>
-            <i class="fa-regular fa-heart"></i>
-            <i class="fa-solid fa-heart"></i>
+            <h1 class="menu__title">La note enchantée<i class="fa-regular fa-heart"></i><i class="fa-solid fa-heart"></i></h1>
 
             <!-- first article gathering all item of menu's first part -->
             <article class="menu__part">
