--- a/pages HTML/laPaletteDuGout.html
+++ b/pages HTML/laPaletteDuGout.html
@@ -20,13 +20,14 @@
 
     <!-- body -->
     <body>
-        <img class="photo-restaurant" src="../images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Photo du restaurant la palette du goût" />
+        <img
+            class="photo-restaurant"
+            src="../images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+            alt="Photo du restaurant la palette du goût" />
 
         <!-- global section gathering all details of menu -->
         <section class="menu">
-            <h1 class="menu__title">La palette du goût</h1>
-            <i class="fa-regular fa-heart"></i>
-            <i class="fa-solid fa-heart"></i>
+            <h1 class="menu__title">La palette du goût<i class="fa-regular fa-heart"></i><i class="fa-solid fa-heart"></i></h1>
 
             <!-- first article gathering all item of menu's first part -->
             <article class="menu__part">
